--- a/main.html
+++ b/main.html
@@ -7,6 +7,25 @@
 </head>
 
 <body>
+	 <img src="https://images.pexels.com/photos/771742/pexels-photo-771742.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="profile">
+    <h1>Shivam singh Gautam</h1>
+    <a href="https://www.linkedin.com/in/shivam-singh-9b3534273/">Linked in</a>
+    <ul id="skills">
+      <li>HTML/CSS</li>
+      <li>Reactjs</li>
+      <li>Javascript</li>
+    </ul>
+    <ul id="projects">
+      <li>
+        wikipedia
+      </li>
+      <li>
+        unsplash
+      </li>
+      <li>
+        github user
+      </li>
+    </ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
